Fixing contrast issues on links

--- a/css/style.css
+++ b/css/style.css
@@ -416,14 +416,14 @@ footer p {
 }
 
 .link-hover-1:hover {
-  color: #007AB8;
-  border-bottom: solid 2px #007AB8;
+  color: #0074AD;
+  border-bottom: solid 2px #0074AD;
 }
 
 .link-hover-2 {
   text-decoration: none;
-  border-bottom: solid 2px #007AB8;
-  color: #007AB8;
+  border-bottom: solid 2px #0074AD;
+  color: #0074AD;
   transition: 0.3s;
 }
 
